@@ -2,6 +2,9 @@
 %:
 	dh $@
 
+DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
 dtmp    = debian/man-db
 
 # Cf. #497653
@@ -26,6 +29,11 @@ override_dh_auto_configure:
 
 override_dh_clean:
 	dh_clean -Xxmalloc.c.orig
+
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+override_dh_installman:
+	PATH="$(CURDIR)/$(dtmp)/usr/bin:$$PATH" dh_installman
+endif
 
 override_dh_fixperms:
 	dh_fixperms
