@@ -5,6 +5,8 @@ man-db (2.5.6-5) UNRELEASED; urgency=low
   * Backport from trunk:
     - Handle iconv errors when attempting to convert the last input encoding
       to UTF-8 (closes: #562503).
+  * Unless we're cross-compiling, get dh_installman to use the version of
+    man we just built.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 17 Nov 2009 18:56:33 -0600
 
